tests/files/type_checker_tests/should_fail/197.cmdr
//Should fail import if file does not exist
import "foo.txt";
